--- a/src/index.css
+++ b/src/index.css
@@ -347,3 +347,73 @@ template {
 [hidden] {
   display: none;
 }
+
+/*
+ My CSS
+ ------------------------------------------------------------------------------------------------------
+ ------------------------------------------------------------------------------------------------------
+*/
+* {
+  box-sizing: border-box;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
+/*
+  HEADER
+  ------------------------------------------------------------------------------------------------------
+*/
+header {
+  height: 80px;
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+header > nav > button {
+  background-color: white;
+  border: 2px solid white; 
+  text-transform: uppercase;
+  color: black;
+  cursor: pointer;
+  height: 76px;
+}
+
+header > svg {
+  fill: #5ECE7B;
+  width: 30px;
+  height: 30px;
+}
+
+.mainHeaderContainer {
+  display: flex;
+  column-gap: 8px;
+  align-items: center;
+  position: relative;
+}
+
+.cartOverlayOpenerBtn {
+  border: 1px solid white;
+  background-color: white;
+  position: relative
+}
+
+.cartOverlayOpenerBtn > svg {
+  width: 30px;
+  height: 30px;
+}
+
+.cartOverlayOpenerBtn > span {
+  padding: 3px;
+  border-radius: 50%;
+  background-color: black;
+  color: white;
+  position: absolute;
+  left: 25px;
+  bottom: 20px;
+}
