--- a/src/index.css
+++ b/src/index.css
@@ -364,12 +364,26 @@ body {
 }
 
 /*
+  LOADING SCREEN
+  ------------------------------------------------------------------------------------------------------
+*/
+.loadingScreen {
+  height: calc(100vh - 80px);
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  position: relative;
+  z-index: 1;
+}
+
+/*
   HEADER
   ------------------------------------------------------------------------------------------------------
 */
 header {
   height: 80px;
-  border: 1px solid black;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -400,7 +414,8 @@ header > svg {
 .cartOverlayOpenerBtn {
   border: 1px solid white;
   background-color: white;
-  position: relative
+  position: relative;
+  cursor: pointer;
 }
 
 .cartOverlayOpenerBtn > svg {
@@ -416,4 +431,101 @@ header > svg {
   position: absolute;
   left: 25px;
   bottom: 20px;
+}
+
+/*
+  PRODUCT LISTING PAGE
+  ------------------------------------------------------------------------------------------------------
+*/
+.productListingSection {
+  position: relative;
+  z-index: 1;
+  background-color: white;
+  padding: 32px 64px;
+  min-height: 100vh;
+}
+
+.productListingSection > h1 {
+  margin-top: 0;
+  margin-bottom: 32px;
+  text-transform: capitalize;
+}
+
+.productsContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 372px);
+  column-gap: 32px;
+  row-gap: 64px;
+}
+
+
+.productsCard {
+  display: flex;
+  flex-direction: column;
+  row-gap: 2px;
+  padding: 8px;
+  box-shadow: 0 0 16px lightgray;
+  border-radius: 2px;
+  position: relative;
+  z-index: 0;
+}
+
+.productsCard > h2 {
+  font-size: 18px;
+  text-transform: capitalize;
+  font-weight: 400;
+}
+
+.productsCard > .price {
+  font-weight: bold;
+  font-size: large;
+}
+
+.svgContainer {
+  width: 40px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  padding: 4px;
+  border-radius: 50%;
+  background-color: #5ECE7B;
+  position: absolute;
+  top: 320px;
+  right: 16px;
+}
+
+.svgContainer > svg {
+  width: 32px;
+  height: 32px;
+}
+
+.imgContainer {
+  position: relative;
+  z-index: 0;
+}
+
+.imgContainer > img {
+  width: 356px;
+  height: 338px;
+  object-fit: cover;
+  object-position: center;
+  position: relative;
+  z-index: 1;
+}
+
+.imgContainer > div {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 2;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: large;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: gray;
+  font-weight: 600;
 }
