--- a/src/index.css
+++ b/src/index.css
@@ -557,8 +557,8 @@ header > svg {
 }
 
 .svgContainer > svg {
-  width: 32px;
-  height: 32px;
+  width: 25px;
+  height: 25px;
 }
 
 .imgContainer {
@@ -618,6 +618,7 @@ header > svg {
   object-fit: contain;
   cursor: pointer;
   margin-bottom: -4px;
+  border: 2px solid white;
 }
 
 .imagesContainer {
@@ -646,15 +647,9 @@ header > svg {
   row-gap: 16px;
 }
 
-.productInfoAttrName {
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
 .attrNameAndSelector {
   display: flex;
   flex-direction: column;
-  row-gap: 4px;
 }
 
 .attrOption {
@@ -662,8 +657,6 @@ header > svg {
 }
 
 .textAttrOption {
-  width: 63px;
-  height: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -673,8 +666,6 @@ header > svg {
 }
 
 .swatchAttrOption {
-  width: 34px;
-  height: 34px;
   border: 2px solid white;
 }
 
@@ -771,14 +762,9 @@ header > svg {
   font-size: 30px;
 }
 
-.productBrandName {
-  font-weight: bold;
-}
-
 .cartProductInfo {
   display: flex;
   flex-direction: column;
-  row-gap: 16px;
 }
 
 .cartPrice {
@@ -800,8 +786,6 @@ header > svg {
 }
 
 .cartImage {
-  width: 200px;
-  height: 288px;
   object-fit: contain;
 }
 
@@ -858,4 +842,19 @@ header > svg {
   row-gap: 12px;
   width: 1180px;
   align-items: start;
+}
+
+/*
+  CART Overlay
+  ------------------------------------------------------------------------------------------------------
+*/
+.cartOverlayBtn {
+  width: "140px";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 43px;
+  border: 1px solid black;
+  text-transform: uppercase;
+  cursor: pointer;
 }
