--- a/src/index.css
+++ b/src/index.css
@@ -353,6 +353,15 @@ template {
  ------------------------------------------------------------------------------------------------------
  ------------------------------------------------------------------------------------------------------
 */
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0,0,0,.5);
+}
+
 * {
   box-sizing: border-box;
 }
