--- a/src/index.css
+++ b/src/index.css
@@ -707,6 +707,7 @@ header > svg {
   text-align: center;
   overflow-x: auto;
   font-size: 24px;
+  height: min-content;
 }
 
 .quantityChangersAndDisplay {
