--- a/src/index.css
+++ b/src/index.css
@@ -707,7 +707,7 @@ header > svg {
   text-align: center;
   overflow-x: auto;
   font-size: 24px;
-  height: min-content;
+  height: 36px;
 }
 
 .quantityChangersAndDisplay {
@@ -765,7 +765,7 @@ header > svg {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  row-gap: 8px;
+  column-gap: 8px;
 }
 
 .productBrandName, .productName {
@@ -793,6 +793,7 @@ header > svg {
   padding: 8px;
   width: max-content;
   font-size: 18px;
+  text-transform: uppercase;
 }
 
 .cartImage {
